test/iam/resourcekind-policy-bindings/organization1.yaml
apiVersion: resourcemanager.miloapis.com/v1alpha1
kind: Organization
metadata:
  name: test-org-1
spec:
  type: Standard
