test/iam/resourcekind-policy-bindings/organization2.yaml
apiVersion: resourcemanager.miloapis.com/v1alpha1
kind: Organization
metadata:
  name: test-org-2
spec:
  type: Standard
