test/iam/resourcekind-policy-bindings/roles/core-secret-manager.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: Role
metadata:
  name: core-secret-manager
spec:
  launchStage: Beta
  includedPermissions:
    - core.miloapis.com/secrets.delete
    - core.miloapis.com/secrets.get
    - core.miloapis.com/secrets.list
