test/iam/resourcekind-policy-bindings/roles/resourcekind-organizationowner.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: Role
metadata:
  name: resourcekind.miloapis.com-organizationowner
spec:
  launchStage: Beta
  includedPermissions:
    - resourcemanager.miloapis.com/organizations.delete
    - resourcemanager.miloapis.com/organizations.get
    - resourcemanager.miloapis.com/organizations.update
    - resourcemanager.miloapis.com/organizations.list
    - resourcemanager.miloapis.com/organizations.create
