test/iam/resourcekind-policy-bindings/user.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: User
metadata:
  name: test-system-admin
spec:
  email: "test-system-admin@example.com"
